src/objects/Alliance_Announcement__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_date__c</fullName>
        <label>Release date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Alliance Announcement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Headline__c</columns>
        <columns>Body__c</columns>
        <columns>Release_date__c</columns>
        <columns>Expiration_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA - {0000}</displayFormat>
        <label>Alliance Announcement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>